firebase realtimeDB save 로직 data layer 로 변경 및 motionLayout touchEvent 오류 수정

--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -62,6 +62,7 @@
         android:background="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/mainContainerLayout"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:clickable="true"
         >
 
         <TextView
